tworzenie kodu qr - rozdzielenie
